overflow fix

--- a/static/join.css
+++ b/static/join.css
@@ -1,4 +1,6 @@
 .roleselector{
+    max-width: 100vw;
+    overflow: scroll;
     border-top: 1px solid #999999;
     border-bottom: 1px solid #999999;
     display: flex;
